// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Common: Container renders correctly 1`] = `
<div
  className="container container"
>
  <div
    className="contentFull"
  >
    <div
      className="contentPrimary"
    >
      <p>
        Sample child
      </p>
    </div>
  </div>
</div>
`;

exports[`Components : Common: Container renders correctly 2`] = `
<div
  className="container container textHeavy"
>
  <div
    className="contentFull"
  >
    <div
      className="contentPrimary"
    >
      <p>
        Sample child
      </p>
    </div>
  </div>
</div>
`;

exports[`Components : Common: Container renders correctly 3`] = `
<div
  className="container container textHeavy"
>
  <div
    className="contentFull"
  >
    <div
      className="contentPrimary"
    >
      <p>
        Sample child
      </p>
    </div>
  </div>
</div>
`;
